--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dependencies": {
         "@inertiajs/progress": "^0.2.7",
         "@inertiajs/vue3": "^1.0.9",
-        "@tailwindcss/forms": "^0.5.4"
+        "@tailwindcss/forms": "^0.5.4",
+        "lodash": "^4.17.21"
     }
 }
